Fixed cart items misalignment and added product pagination

--- a/src/app/cart/cart.component.css
+++ b/src/app/cart/cart.component.css
@@ -101,11 +101,11 @@ a {
     padding: 1rem;
     background-color: whitesmoke;
     border-radius: 1.25rem;
-    flex-grow: 1;
+    flex: 1;
     display: flex;
     align-items: center;
     gap: 1rem;
-    height: 100%;
+    min-height: 100%;
 }
 
 .cart-item:hover {
@@ -118,6 +118,8 @@ a {
 
 .cart-item-img img {
     mix-blend-mode: multiply;
+    width: 7.5rem;
+    height: auto;
 }
 
 .cart-btn {
@@ -160,6 +162,7 @@ a {
     padding: 1rem;
     border-radius: 1.25rem;
     color: dimgray;
+    width: fit-content;
 }
 
 .emptymessage-container p:last-of-type {
@@ -180,6 +183,7 @@ a {
 .store-name span {
     font-size: 32px;
 }
+
 
 @media (max-width: 46.875rem) { 
     .navbar, .header-text-image-container {
